fix white flicker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,8 @@
   }
 }
 
+
+
 body {
   color: var(--foreground);
   background: var(--background);
@@ -40,7 +42,9 @@ body {
   opacity: 0;
 }
 
-
+*:root {
+  background-color:  rgb(17 24 39);
+}
 
 @layer base {
   :root {
